--- a/Modules/WebPlayer/style.css
+++ b/Modules/WebPlayer/style.css
@@ -8,9 +8,19 @@ body {
   background: #131418;
 }
 
+.main-container {
+  display: flex;
+  width: 100vw; /* Use the full viewport width */
+  height: calc((9 / 16) * 100vw); /* Maintain the 16:9 aspect ratio */
+  max-height: 100vh; /* Ensure it doesn't exceed the viewport height */
+  justify-content: center; /* Optional: Center content horizontally */
+  align-items: center; /* Optional: Center content vertically */
+  overflow: hidden; /* Optional: Prevent content overflow */
+  background-color: #f0f0f0; /* Optional: Add a background color */
+}
+
+
 .video-container {
-  width: 1024px;
-  height: calc((9 / 16) * 1024px);
   position: relative;
   color: #fff;
   overflow: hidden;
@@ -18,12 +28,18 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 .video-container video {
   max-width: 100%;
   max-height: 100%;
+    object-fit: contain;
+    transition: all .2s;
+    
 }
+
 
 .custom-loader {
   position: absolute;
@@ -373,14 +389,23 @@ body {
 }
 
 .fullscreen {
-  position: absolute !important;
-  max-width: 100% !important;
-  width: 100% !important;
-  height: 100% !important;
-  display: flex !important;
-  background: #000 !important;
-  align-items: center !important;
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    max-width: 100vw !important;
+    width: 100vw !important;
+    height: 100vh !important;
+    display: flex !important;
+    background: #000 !important;
+    align-items: center !important;
+    z-index: 999999 !important;
 }
+
+
+.fullscreen video{
+    object-fit: contain;
+}
+
 
 .right-controls {
   display: flex;
@@ -422,4 +447,39 @@ body {
   to {
     transform: rotate(360deg);
   }
+}
+
+/* playlist css  */
+.playlist-container {
+    background: #1c1d22;
+    height: 100%;
+    width: 30%;
+    box-sizing: border-box;
+    padding: 1rem;
+    overflow: auto;
+  }
+
+  .playlist {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .playlist li {
+    font-size: x-large;
+    color: #fff;
+    padding: 0.8rem 0.5rem;
+    border-radius: 5px;
+    transition: all 0.2s;
+    margin-bottom: 0.5rem;
+    cursor: pointer;
+  }
+
+  .playlist li:hover {
+    background: #2a2b2f;
+  }
+  .playlist li.active-list {
+  background: #2a2b2f;
+  border-left: 5px solid #ff6a00;
+  font-weight: bolder;
 }
